// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createIamRoleEntity should convert custom role to entity 1`] = `
{
  "_class": [
    "AccessRole",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "description": "Description",
        "etag": "abc123",
        "includedPermissions": [
          "cloudfunctions.functions.get",
          "cloudfunctions.functions.getIamPolicy",
        ],
        "name": "projects/j1-gc-integration-dev-v2/roles/myrole",
        "stage": "GA",
        "title": "Role",
      },
    },
  ],
  "_type": "google_iam_role",
  "createdOn": undefined,
  "custom": true,
  "deleted": false,
  "description": "Description",
  "displayName": "Role",
  "etag": "abc123",
  "name": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "permissions": [
    "cloudfunctions.functions.get",
    "cloudfunctions.functions.getIamPolicy",
  ],
  "readonly": true,
  "stage": "GA",
}
`;

exports[`#createIamRoleEntity should convert noncustom role to entity 1`] = `
{
  "_class": [
    "AccessRole",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "_rawData": [],
  "_type": "google_iam_role",
  "createdOn": undefined,
  "custom": false,
  "deleted": false,
  "description": "Description",
  "displayName": "Role",
  "etag": "abc123",
  "name": "projects/j1-gc-integration-dev-v2/roles/myrole",
  "permissions": [
    "cloudfunctions.functions.get",
    "cloudfunctions.functions.getIamPolicy",
  ],
  "readonly": true,
  "stage": "GA",
}
`;

exports[`#createIamServiceAccount should convert to entity 1`] = `
{
  "_class": [
    "User",
  ],
  "_key": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "description": "J1 Google Cloud integration execution",
        "email": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        "etag": "abc=",
        "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        "oauth2ClientId": "1234567890",
        "projectId": "j1-gc-integration-dev-v2",
        "uniqueId": "1234567890",
      },
    },
  ],
  "_type": "google_iam_service_account",
  "active": true,
  "createdOn": undefined,
  "description": "J1 Google Cloud integration execution",
  "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "email": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "enabled": true,
  "etag": "abc=",
  "id": "1234567890",
  "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "oauth2ClientId": "1234567890",
  "projectId": "j1-gc-integration-dev-v2",
  "username": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/1234567890?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
}
`;

exports[`#createIamServiceAccount should convert to entity with "enabled" set to "false" if "disabled" is "true" 1`] = `
{
  "_class": [
    "User",
  ],
  "_key": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "description": "J1 Google Cloud integration execution",
        "disabled": true,
        "email": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        "etag": "abc=",
        "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
        "oauth2ClientId": "1234567890",
        "projectId": "j1-gc-integration-dev-v2",
        "uniqueId": "1234567890",
      },
    },
  ],
  "_type": "google_iam_service_account",
  "active": false,
  "createdOn": undefined,
  "description": "J1 Google Cloud integration execution",
  "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "email": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "enabled": false,
  "etag": "abc=",
  "id": "1234567890",
  "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "oauth2ClientId": "1234567890",
  "projectId": "j1-gc-integration-dev-v2",
  "username": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/1234567890?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
}
`;

exports[`#createIamServiceAccountHasKeyRelationship should convert to relationship 1`] = `
{
  "_class": "HAS",
  "_fromEntityKey": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  "_key": "j1-gc-integration-dev-v2-sa@j1-gc-integration-dev-v2.iam.gserviceaccount.com|has|projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
  "_toEntityKey": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
  "_type": "google_iam_service_account_has_key",
  "displayName": "HAS",
  "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/1234567890?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
}
`;

exports[`#createIamServiceAccountKeyEntity should convert to entity 1`] = `
{
  "_class": [
    "AccessKey",
  ],
  "_key": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "keyAlgorithm": "KEY_ALG_RSA_2048",
        "keyOrigin": "GOOGLE_PROVIDED",
        "keyType": "SYSTEM_MANAGED",
        "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
        "validAfterTime": "2020-08-05T18:05:19Z",
        "validBeforeTime": "2020-08-21T18:05:19Z",
      },
    },
  ],
  "_type": "google_iam_service_account_key",
  "algorithm": "KEY_ALG_RSA_2048",
  "createdOn": 1596650719000,
  "displayName": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
  "expiresOn": 1598033119000,
  "name": "projects/j1-gc-integration-dev-v2/serviceAccounts/j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com/keys/12345",
  "origin": "GOOGLE_PROVIDED",
  "type": "SYSTEM_MANAGED",
  "webLink": "https://console.cloud.google.com/iam-admin/serviceaccounts/details/abc123?orgonly=true&project=j1-gc-integration-dev-v2&supportedpurview=organizationId",
}
`;
